fix(navbar): searchbar popup overlapping with side menu offcanvas

--- a/client/src/components/desktop/navbar/NavBar.scss
+++ b/client/src/components/desktop/navbar/NavBar.scss
@@ -17,10 +17,6 @@
     height: 60px;
 }
 
-.home-sidebar {
-    top: 76px !important;
-}
-
 .d-searchbar {
     background-color: #d9ccef;
     display: flex;
