--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -18,7 +18,3 @@ $theme-colors:map-merge($theme-colors, $custom-colors);
 :root {
   --bs-body-font-family: 'Roboto', sans-serif;
 }
-
-.offcanvas-backdrop {
-  top: 76px;
-}
